--- a/leads/templates/leads/lead_create.html
+++ b/leads/templates/leads/lead_create.html
@@ -8,7 +8,8 @@
 <body>
     <a href="/leads">Go back to leads</a>
     <h1>Create a new lead</h1>
-    <form>
+    <form method="post">
+        {% csrf_token %}
         {{ form.as_p }}
     </form>
 </html>
